<resources>
    <string name="app_name">DS Player</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account">Account</string>
    <string name="add">Create</string>
    <string name="add_all">Add all</string>
    <string name="add_and_play_it">Add and play it</string>
    <string name="add_as_shared_playlist">Add as group playlist</string>
    <string name="add_favorite">Add to Favorites</string>
    <string name="add_item">Add to queue</string>
    <string name="add_multi_songs_to_next_success">The [__NUMBER__] songs will be played next</string>
    <string name="add_single_song_to_next_success">This song will be played next</string>
    <string name="add_songs_success">Added [__NUMBER__] song(s) to queue.</string>
    <string name="add_songs_to_playlist">Added [__NUMBER__] song(s) to [__PLAYLIST_NAME__]</string>
    <string name="add_songs_to_task">[__NUMBER__] song(s) will be downloaded</string>
    <string name="add_to_next">Add next to current</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="album">Album</string>
    <string name="album_artist">Album Artist</string>
    <string name="all_albums">All albums</string>
    <string name="all_songs">All songs</string>
    <string name="analytics">Analytics</string>
    <string name="analytics_setting">Usage analysis</string>
    <string name="androidauto_num_of_default_playlists">%1$d default playlist(s)</string>
    <string name="androidauto_setting_default_playlists_title">Default playlists</string>
    <string name="androidauto_setting_description">You can choose to show DS audio default playlists in Android Auto supported cars.</string>
    <string name="androidauto_setting_section">Android Auto</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applog_deselect_all">Deselect All</string>
    <string name="applog_enable_log">Enable logging</string>
    <string name="applog_log_setting">Log settings</string>
    <string name="applog_select_all">Select All</string>
    <string name="applog_str_address">Address</string>
    <string name="applog_str_connection">Connection</string>
    <string name="applog_str_logs">Logs</string>
    <string name="applog_str_share">Share</string>
    <string name="applog_str_type">Type</string>
    <string name="applog_str_view">View</string>
    <string name="applog_view_logs">View Logs</string>
    <string name="artist">Artist</string>
    <string name="auto_login">Auto login</string>
    <string name="back">Back</string>
    <string name="back_to_parent">Parent folder</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="btn_got_it">Got it</string>
    <string name="cache_limit">Storage</string>
    <string name="cache_no_limit">No Limit</string>
    <string name="cache_setting">Downloads</string>
    <string name="cache_setting_automatic">Automatic</string>
    <string name="cache_setting_delete_all">Remove downloaded songs</string>
    <string name="cache_setting_delete_all_automatic_songs">Remove songs</string>
    <string name="cache_setting_delete_all_manual_songs">Remove downloaded songs</string>
    <string name="cache_setting_manual">Manual</string>
    <string name="cache_setting_manual_description">Downloaded songs (from manual downloads or in the local playlists) will remain on your mobile device. To remove these songs, delete them individually or click \"Remove downloaded songs\".</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="cast_dynamic_group_name_format">%1$s + %2$d</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="category_album">Albums</string>
    <string name="category_all">All Categories</string>
    <string name="category_artist">Artists</string>
    <string name="category_composer">Composers</string>
    <string name="category_folder">Folders</string>
    <string name="category_general">General</string>
    <string name="category_genre">Genres</string>
    <string name="category_homepage">Home</string>
    <string name="category_homepage_default_genre">Recommended Genre</string>
    <string name="category_homepage_pin">My Pins</string>
    <string name="category_homepage_test">My Test</string>
    <string name="category_playlist">Playlists</string>
    <string name="category_radio">Radio</string>
    <string name="category_search">Search</string>
    <string name="category_setting">Settings</string>
    <string name="category_smartplaylist">Smart Playlist</string>
    <string name="category_song">Songs</string>
    <string name="category_title">Title</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_to_leave">Are you sure you want to exit DS audio?</string>
    <string name="check_to_leave_toast">Press the back button again to exit the app.</string>
    <string name="check_to_logout">Are you sure you want to logout?</string>
    <string name="chromecast_untrust_certificate">Your certificate is untrusted by Chromecast. Please log in to DS audio again with HTTPS disabled, or install a valid certificate on your Synology NAS.</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">00000000000000000000000000000000</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Remove all</string>
    <string name="developer_mode">developer_mode</string>
    <string name="download">Download</string>
    <string name="download_path">Download path</string>
    <string name="edit">Edit</string>
    <string name="force_transcode_formats">Always convert</string>
    <string name="fragment_type">type</string>
    <string name="local">Downloaded Songs</string>
    <string name="login_account">Account</string>
    <string name="num_of_formats">%1$d format(s)</string>
    <string name="personal_library_source">Library source</string>
    <string name="pin">Pin</string>
    <string name="play">Play</string>
    <string name="play_all">Play all</string>
    <string name="playing_queue">Queue</string>
    <string name="pref_enable_equalizer">Enable Equalizer</string>
    <string name="pref_remote_controller">Remote player controller</string>
    <string name="pref_remote_controller_description">Disable to reduce your Android device’s power consumption in the remote mode if you don’t need to control the volume with your device’s hardware buttons</string>
    <string name="pref_tap_song">Append by</string>
    <string name="rating_action">Rate</string>
    <string name="refresh">Refresh</string>
    <string name="reorder">Reorder</string>
    <string name="save">Save</string>
    <string name="select_equalizer">Select Equalizer</string>
    <string name="select_player">Select player</string>
    <string name="setting_login_information">Login Information</string>
    <string name="settings">Settings</string>
    <string name="sharing_share">Share</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="sound_effect_setting_title">Sound Effects</string>
    <string name="str_about">About</string>
    <string name="str_copyright">© 2024 Synology Inc.</string>
    <string name="transcode_quality">Playback quality</string>
    <string name="transcode_selecting_title">Conversion format</string>
    <string name="transcode_setting_title">Conversion</string>
    <string name="type_analytics">analytics</string>
    <string name="unpin">Unpin</string>
    <string name="viewing_mode">Viewing Mode</string>
    <string name="volume_btn_title">Volume</string>
</resources>