<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/menu_volume"
        android:icon="@drawable/tool_volume"
        android:title="@string/volume_btn_title"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@id/menu_lyric_queue"
        android:icon="@drawable/tool_playingq"
        android:title="@string/playing_queue"
        app:showAsAction="always" />
    <item
        android:id="@id/menu_edit"
        android:title="@string/edit"
        app:showAsAction="never" />
    <item
        android:id="@id/menu_reoder"
        android:title="@string/reorder"
        app:showAsAction="never" />
    <item
        android:id="@id/menu_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />
    <item
        android:id="@id/menu_sleep_timer"
        android:title="@string/sleep_timer"
        app:showAsAction="never" />
    <item
        android:id="@id/menu_save"
        android:title="@string/save"
        app:showAsAction="never" />
    <item
        android:id="@id/menu_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never" />
    <item
        android:id="@id/menu_setting"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>