<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:appcompat="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_toolbar_remote_off"
        android:id="@+id/menu_player_chooser"
        android:title="@string/select_player"
        appcompat:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_menu_search"
        android:id="@+id/menu_search"
        android:title="@string/category_search"
        appcompat:showAsAction="never"/>
    <item
        android:icon="@drawable/tool_select"
        android:id="@+id/menu_edit"
        android:title="@string/edit"
        appcompat:showAsAction="never"/>
    <item
        android:icon="@drawable/tool_mode"
        android:id="@+id/menu_view"
        android:title="@string/viewing_mode"
        appcompat:showAsAction="never"/>
    <item
        android:id="@+id/menu_pin"
        android:title="@string/pin"
        appcompat:showAsAction="never"/>
    <item
        android:id="@+id/menu_unpin"
        android:title="@string/unpin"
        appcompat:showAsAction="never"/>
    <item
        android:id="@+id/menu_sleep_timer"
        android:title="@string/sleep_timer"
        appcompat:showAsAction="never"/>
    <item
        android:icon="@drawable/tool_select"
        android:id="@+id/menu_reorder"
        android:title="@string/reorder"
        appcompat:showAsAction="never"/>
    <item
        android:icon="@drawable/ic_menu_playall"
        android:id="@+id/menu_play_all"
        android:title="@string/play_all"
        appcompat:showAsAction="never"/>
    <item
        android:icon="@drawable/ic_menu_addtoqueue"
        android:id="@+id/menu_add_all"
        android:title="@string/add_all"
        appcompat:showAsAction="never"/>
</menu>